RESOLVED FIXED141582
Crash closing a tab when a context or popup menu is open
https://bugs.webkit.org/show_bug.cgi?id=141582
Summary Crash closing a tab when a context or popup menu is open
Simon Fraser (smfr)
Reported 2015-02-13 17:07:30 PST
Crash closing a tab when a context or popup menu is open
Attachments
Patch (10.77 KB, patch)
2015-02-13 17:13 PST, Simon Fraser (smfr)
andersca: review+
Simon Fraser (smfr)
Comment 1 2015-02-13 17:13:38 PST
Simon Fraser (smfr)
Comment 2 2015-03-01 18:39:14 PST
Note You need to log in before you can comment on or make changes to this bug.